--- a/index.html
+++ b/index.html
@@ -5,8 +5,28 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>my-portfolio</title>
+  <title>Abhishek Jhatiwal</title>
+  <meta name="description"
+        content="Abhishek Jhatiwal is a Software Developer specializing in Android, Firebase, Jetpack Compose, and Backend Development. View projects, skills, and experience." />
+
+  <meta name="keywords"
+        content="Abhishek Jhatiwal, Abhishek Jhatiwal portfolio, Android Developer Abhishek Jhatiwal, Software Developer Abhishek Jhatiwal" />
+
+  <meta name="author" content="Abhishek Jhatiwal" />
   <script src="https://cdn.tailwindcss.com"></script>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Abhishek Jhatiwal",
+      "url": "https://abhishekjhatiwal.netlify.app/",
+      "jobTitle": "Software Developer",
+      "sameAs": [
+        "https://github.com/abhishekjhatiwal",
+        "https://www.linkedin.com/in/abhishekjhatiwal"
+      ]
+    }
+  </script>
 </head>
 
 <body>
