Add JSON-LD script for personal schema
Added structured data for personal information.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,19 @@
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Abhishek Jhatiwal",
+  "url": "https://abhishekjhatiwal.netlify.app/",
+  "jobTitle": "Software Developer",
+  "sameAs": [
+    "https://github.com/abhishekjhatiwal",
+    "https://www.linkedin.com/in/abhishekjhatiwal"
+  ]
+}
+</script>
 </body>
 
 </html>
