Add Google site verification to index.html
Added Google site verification meta tag.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <meta name="keywords"
   content="Abhishek Jhatiwal, Abhishek Jhatiwal portfolio, Android Developer Abhishek Jhatiwal, Software Developer Abhishek Jhatiwal" />
 
+  <meta name="google-site-verification" content="aWnzfHyFYQ3enXH2TVBec53bYgZMQfvontYcUH2Qdc0" />
+
 <meta name="author" content="Abhishek Jhatiwal" />
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
